# SIGMOD2022_HET-GMP

./: CMakeLists.txt  README.md  hetu.exp
cmake/: config.cmake
cmake/Modules/: FindCUDNN.cmake  FindZMQ.cmake
examples/: hetuctr.py
examples/models/: hetuctr_data.py  hetuctr_models.py  load_data.py
hetuCTR/: .gitignore  CMakeLists.txt  env.sh
hetuCTR/cmake/: FindNCCL.cmake  FindZMQ.cmake
hetuCTR/csrc/: CMakeLists.txt
hetuCTR/csrc/common/: helper_cuda.h  logging.h  sarray.h
hetuCTR/csrc/core/: all2all.cu  debug.cu  generate_query.cu  handle_query.cu  hetu_gpu_table.cu  hetu_gpu_table.h  preprocess.cu  preprocess_struct.h  preprocess_sturct.cu  table_initialize.cu  types.h  writeback.cu
hetuCTR/csrc/partition/: partition.cc  partition.h  pybind.cc
hetuCTR/csrc/pybind/: container.h  pybind.cu  pybind.h
hetuCTR/csrc/utils/: initializer.cu  initializer.h  pinned.cuh  rendezvous.cc  rendezvous.h  thread_pool.cc  thread_pool.h
hetuCTR/experimental/: partition.py
python/hetu/: __init__.py  _base.py  context.py  cstable.py  data.py  dataloader.py  initializers.py  launcher.py  model.py  ndarray.py  optimizer.py  stream.py
src/: CMakeLists.txt
src/common/: c_runtime_api.cc  c_runtime_api.h  cpu_device_api.cc  cuda_device_api.h  dlarray.h
src/communication/: CMakeLists.txt  mpi_nccl_communication.cu
src/cuda_common/: cuda_device_api.cc  gpu_chunk.cc  gpu_runtime.cc  gpu_runtime.h
src/header/: mpi_nccl_communication.h
src/memory_pool/: BFC_allocator.h  allocator.cc  allocator.h
src/ops/: AddConst.cu  AddElewise.cu  ArrayLazyCallback.cu  ArraySet.cu  AvgPool.cu  BatchMatrixMult.cu  BinaryCrossEntropy.cu  Broadcast.cu  BroadcastShape.cu  Concat.cu  Conv2d.cu  Conv2dBroadcast.cu  Conv2dReduceSum.cu  CuSparseCsrmm.cu  CudnnAvgPool.cu  CudnnBn.cu  CudnnConv2d.cu  CudnnDropout.cu  CudnnMaxPool.cu  CudnnSoftmax.cu  CudnnSoftmaxEntropy.cu  DivideConst.cu  DivideElewise.cu  Dot.cu  Dropout.cu  Dropout2d.cu  EmbeddingLookup.cu  IndexedSlices.cu  Initializers.cu  InstanceNorm2d.cu  MaxPool.cu  (+20 more)
(+113 files in other folders)
